# brazil_weather_data

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  README_PT_BR.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml
.github/workflows/: main.yaml
app/: main.py
app/api/: index.html
app/tools/: collectors.py  general.py  logger_config.py  pipeline.py  validators.py
app/tools/collectors/: index.html
app/tools/general/: index.html
app/tools/pipeline/: index.html
app/tools/validators/: index.html
data/output/: stations.parquet  weather.parquet
docs/: index.md
docs/app/: api.md
docs/app/tools/: collectors.md  general.md  pipeline.md  validators.md
docs/tests/: test_api.md
docs/tests/tools/: test_collectors.md  test_general.md  test_validators.md
search/: search_index.json
tests/: __init__.py  test_api.py  test_first.py
tests/test_api/: index.html
tests/tools/: __init__.py  conftest.py  test_collectors.py  test_general.py  test_general_tools.py  test_pipeline.py  test_validator.py  test_validators.py
tests/tools/test_collectors/: index.html
tests/tools/test_general/: index.html
tests/tools/test_validators/: index.html
