[tool.poetry]
name = "brazil-weather-data"
version = "0.1.0"
description = "Brazil Weather Data API is a project to transform data from INMET (Brazilian Weather Institute) into a API using FastAPI and DuckDB"
authors = ["Greg Oliveira <gregoryomelo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
taskipy = "^1.12.2"
httpx = "^0.26.0"
duckdb = "0.8.1"
pandas = "^2.1.4"
pydantic = "^2.5.3"
pyarrow = "^15.0.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
commitizen = "^3.13.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.8.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.6"
pymdown-extensions = "^10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
run = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
test = "pytest -v"
killr = "kill -9 $(lsof -t -i:8000)"
docs = "mkdocs serve -a 0.0.0.0:8001"
killd = "kill -9 $(lsof -t -i:8001)"
pipeline = "python -m app.tools.pipeline"
